// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search.searchGeolocations should allow filtering as in normal search 1`] = `
Array [
  Object {
    "metadata": Object {
      "inhertied_country": Array [
        Object {
          "entity": "entity06",
          "inherit_geolocation": Array [
            null,
          ],
        },
      ],
      "inhertied_home": Array [
        Object {
          "entity": "entity01",
          "inherit_geolocation": Array [
            Object {
              "label": "",
              "lat": 13,
              "lon": 7,
            },
          ],
        },
        Object {
          "entity": "entity03",
          "inherit_geolocation": Array [
            Object {
              "label": "",
              "lat": 5,
              "lon": 10,
            },
          ],
        },
        Object {
          "entity": "entity04",
          "inherit_geolocation": Array [],
        },
        Object {
          "entity": "entity04.1",
          "inherit_geolocation": Array [],
        },
      ],
      "regular_geolocation_geolocation": Array [
        Object {
          "lat": 18,
          "lon": 7,
        },
      ],
    },
    "sharedId": "entity07",
  },
  Object {
    "metadata": Object {
      "inhertied_home": Array [
        Object {
          "entity": "entity02",
          "inherit_geolocation": Array [
            Object {
              "label": "",
              "lat": 111,
              "lon": 222,
            },
          ],
        },
        Object {
          "entity": "noExiste",
          "inherit_geolocation": Array [],
        },
      ],
    },
    "sharedId": "entity08",
  },
]
`;

exports[`search.searchGeolocations should include all geolocation finds, inheriting metadata 1`] = `
Array [
  Object {
    "metadata": Object {
      "home_geolocation": Array [
        Object {
          "label": "",
          "lat": 13,
          "lon": 7,
        },
      ],
      "work_geolocation": Array [
        Object {
          "label": "",
          "lat": 23,
          "lon": 8,
        },
      ],
    },
    "sharedId": "entity01",
  },
  Object {
    "metadata": Object {
      "home_geolocation": Array [
        Object {
          "label": "",
          "lat": 111,
          "lon": 222,
        },
      ],
      "work_geolocation": Array [
        Object {
          "label": "",
          "lat": 333,
          "lon": 444,
        },
      ],
    },
    "sharedId": "entity02",
  },
  Object {
    "metadata": Object {
      "home_geolocation": Array [
        Object {
          "label": "",
          "lat": 5,
          "lon": 10,
        },
      ],
    },
    "sharedId": "entity03",
  },
  Object {
    "metadata": Object {
      "country_geolocation": Array [
        Object {
          "label": "",
          "lat": 23,
          "lon": 7,
        },
      ],
    },
    "sharedId": "entity05",
  },
  Object {
    "metadata": Object {
      "inhertied_country": Array [
        Object {
          "entity": "entity06",
          "inherit_geolocation": Array [],
        },
      ],
      "inhertied_home": Array [
        Object {
          "entity": "entity01",
          "inherit_geolocation": Array [
            Object {
              "label": "",
              "lat": 13,
              "lon": 7,
            },
          ],
        },
        Object {
          "entity": "entity03",
          "inherit_geolocation": Array [
            Object {
              "label": "",
              "lat": 5,
              "lon": 10,
            },
          ],
        },
        Object {
          "entity": "entity04",
          "inherit_geolocation": Array [],
        },
        Object {
          "entity": "entity04.1",
          "inherit_geolocation": Array [],
        },
      ],
      "regular_geolocation_geolocation": Array [
        Object {
          "lat": 18,
          "lon": 7,
        },
      ],
    },
    "sharedId": "entity07",
  },
  Object {
    "metadata": Object {
      "inhertied_home": Array [
        Object {
          "entity": "entity02",
          "inherit_geolocation": Array [
            Object {
              "label": "",
              "lat": 111,
              "lon": 222,
            },
          ],
        },
        Object {
          "entity": "noExiste",
          "inherit_geolocation": Array [],
        },
      ],
    },
    "sharedId": "entity08",
  },
  Object {
    "metadata": Object {
      "inhertied_work": Array [
        Object {
          "entity": "entity01",
          "inherit_geolocation": Array [
            Object {
              "label": "",
              "lat": 23,
              "lon": 8,
            },
          ],
        },
      ],
    },
    "sharedId": "entity09",
  },
  Object {
    "metadata": Object {
      "inhertied_work": Array [
        Object {
          "entity": "entity06",
          "inherit_geolocation": Array [],
        },
      ],
    },
    "sharedId": "entity10",
  },
]
`;
